trunk/Archive2/85/231376a0bb3eb5/output
main.cpp:7:18: error: expression is not assignable
        if( NULL = ptr1 )
            ~~~~ ^
1 error generated.
