trunk/Archive2/85/231376a0bb3eb5/main.cpp
    #include <iostream>
    
    int main()
    {
        int *ptr1 = NULL ;
        
        if( NULL = ptr1 )
        {
                std::cout << "It is NULL" << std::endl ;
        }
        
    }